objects/JBP_Competitive_Landscape__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Commentary regarding the competitor (e.g., new product launch is taking market share, etc.)</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>HP’s competitors that the partner is also selling</inlineHelpText>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Landscapes</relationshipLabel>
        <relationshipName>Competitive_Landscapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Share_of_Business_Prcnt__c</fullName>
        <inlineHelpText>HP competitor’s % of a partner’s total business</inlineHelpText>
        <label>Share of Business(%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Share_of_Business__c</fullName>
        <inlineHelpText>HP competitor’s $ of a partner’s total business</inlineHelpText>
        <label>Share of Business($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GBU_Specialization_Plan__c</fullName>
        <inlineHelpText>The associated sub-plan for the competitive landscape.</inlineHelpText>
        <label>Sub-Plan</label>
        <referenceTo>GBU_Specialization_Plans__c</referenceTo>
        <relationshipLabel>Competitive Landscapes</relationshipLabel>
        <relationshipName>Competitive_Landscapes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GBU_Specialization__c</fullName>
        <formula>TEXT( GBU_Specialization_Plan__r.GBU_Specialization__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_of_Services_Prcnt__c</fullName>
        <inlineHelpText>HP competitor’s % of a partner’s total services business</inlineHelpText>
        <label>Share of Services(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Share_of_Services__c</fullName>
        <inlineHelpText>HP competitor’s $ of a partner’s total services business</inlineHelpText>
        <label>Share of Services($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Competitive Landscape</label>
    <nameField>
        <displayFormat>Competitive-{0000}</displayFormat>
        <label>Competitor Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Landscapes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>